// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`вызовы массивов обычных 1`] = `
Object {
  "handlers": Array [
    Object {
      "event": "world_start",
      "operations": Array [
        Object {
          "action": "set_variable_create_list",
          "values": Array [
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "values",
              "value": Object {
                "type": "array",
                "values": Array [
                  Object {
                    "number": 1,
                    "type": "number",
                  },
                  Object {
                    "number": 2,
                    "type": "number",
                  },
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                ],
              },
            },
          ],
        },
        Object {
          "action": "set_variable_get_list_value",
          "values": Array [
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "b",
              },
            },
            Object {
              "name": "list",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "number",
              "value": Object {
                "number": 0,
                "type": "number",
              },
            },
          ],
        },
      ],
      "position": 0,
      "type": "event",
    },
  ],
}
`;

exports[`вызовы массивов с установкой 1`] = `
Object {
  "handlers": Array [
    Object {
      "event": "world_start",
      "operations": Array [
        Object {
          "action": "set_variable_create_list",
          "values": Array [
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "values",
              "value": Object {
                "type": "array",
                "values": Array [
                  Object {
                    "number": 1,
                    "type": "number",
                  },
                  Object {
                    "number": 2,
                    "type": "number",
                  },
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                ],
              },
            },
          ],
        },
        Object {
          "action": "set_variable_set_list_value",
          "values": Array [
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "list",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "index",
              "value": Object {
                "number": 1,
                "type": "number",
              },
            },
            Object {
              "name": "value",
              "value": Object {
                "number": 2,
                "type": "number",
              },
            },
          ],
        },
      ],
      "position": 0,
      "type": "event",
    },
  ],
}
`;

exports[`вызовы функций встроенных объектов обычных 1`] = `
Object {
  "handlers": Array [
    Object {
      "event": "world_start",
      "operations": Array [
        Object {
          "action": "set_variable_create_list",
          "values": Array [
            Object {
              "name": "values",
              "value": Object {
                "type": "array",
                "values": Array [
                  Object {
                    "number": 1,
                    "type": "number",
                  },
                  Object {
                    "number": 2,
                    "type": "number",
                  },
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                ],
              },
            },
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
          ],
        },
        Object {
          "action": "set_variable_create_list",
          "values": Array [
            Object {
              "name": "values",
              "value": Object {
                "type": "array",
                "values": Array [
                  Object {
                    "number": 1,
                    "type": "number",
                  },
                  Object {
                    "number": 2,
                    "type": "number",
                  },
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                ],
              },
            },
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "c",
              },
            },
          ],
        },
        Object {
          "action": "player_send_message",
          "values": Array [
            Object {
              "name": "messages",
              "value": Object {
                "type": "array",
                "values": Array [
                  Object {
                    "text": "hello!",
                    "type": "text",
                  },
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                  Object {},
                ],
              },
            },
            Object {
              "name": "merging",
              "value": Object {
                "enum": "CONCATENATION",
                "type": "enum",
              },
            },
          ],
        },
      ],
      "position": 0,
      "type": "event",
    },
  ],
}
`;

exports[`вызовы функций встроенных объектов с неизвестным аргументом 1`] = `"Неизвестный аргумент 'b'"`;

exports[`вызовы функций встроенных объектов с неподходящим типом аргумента 1`] = `"Аргумент с типом [36mтекст[39m не может быть установлен параметру с типом [36mчисло[39m"`;

exports[`вызовы функций переменных обычных 1`] = `
Object {
  "handlers": Array [
    Object {
      "event": "world_start",
      "operations": Array [
        Object {
          "action": "set_variable_value",
          "values": Array [
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "value",
              "value": Object {
                "number": 5,
                "type": "number",
              },
            },
          ],
        },
        Object {
          "action": "set_variable_increment",
          "values": Array [
            Object {
              "name": "number",
              "value": Object {
                "number": 1,
                "type": "number",
              },
            },
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
          ],
        },
        Object {
          "action": "set_variable_decrement",
          "values": Array [
            Object {
              "name": "number",
              "value": Object {
                "number": 2,
                "type": "number",
              },
            },
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
          ],
        },
      ],
      "position": 0,
      "type": "event",
    },
  ],
}
`;

exports[`вызовы функций переменных с неизвестным аргументом 1`] = `"Неизвестный аргумент 'min2'"`;

exports[`вызовы функций переменных с неподходящим типом аргумента 1`] = `"Аргумент с типом [36mтекст[39m не может быть установлен параметру с типом [36mчисло[39m"`;

exports[`вызовы функций переменных с установкой значения 1`] = `
Object {
  "handlers": Array [
    Object {
      "event": "world_start",
      "operations": Array [
        Object {
          "action": "set_variable_value",
          "values": Array [
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "value",
              "value": Object {
                "number": 5,
                "type": "number",
              },
            },
          ],
        },
        Object {
          "action": "set_variable_clamp",
          "values": Array [
            Object {
              "name": "min",
              "value": Object {
                "number": 1,
                "type": "number",
              },
            },
            Object {
              "name": "max",
              "value": Object {
                "number": 2,
                "type": "number",
              },
            },
            Object {
              "name": "number",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "b",
              },
            },
          ],
        },
        Object {
          "action": "set_variable_clamp",
          "values": Array [
            Object {
              "name": "min",
              "value": Object {
                "number": 1,
                "type": "number",
              },
            },
            Object {
              "name": "max",
              "value": Object {
                "number": 2,
                "type": "number",
              },
            },
            Object {
              "name": "number",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "c",
              },
            },
          ],
        },
      ],
      "position": 0,
      "type": "event",
    },
  ],
}
`;

exports[`вызовы функций фабрик обычных 1`] = `
Object {
  "handlers": Array [
    Object {
      "event": "world_start",
      "operations": Array [
        Object {
          "action": "set_variable_value",
          "values": Array [
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "a",
              },
            },
            Object {
              "name": "value",
              "value": Object {
                "pitch": 0,
                "type": "location",
                "x": 1,
                "y": 2,
                "yaw": 90,
                "z": 3,
              },
            },
          ],
        },
        Object {
          "action": "set_variable_value",
          "values": Array [
            Object {
              "name": "variable",
              "value": Object {
                "scope": "local",
                "type": "variable",
                "variable": "b",
              },
            },
            Object {
              "name": "value",
              "value": Object {
                "pitch": 5,
                "type": "location",
                "x": 1,
                "y": 2,
                "yaw": 4,
                "z": 3,
              },
            },
          ],
        },
      ],
      "position": 0,
      "type": "event",
    },
  ],
}
`;

exports[`вызовы функций фабрик с неподходящим типом аргумента 1`] = `"Аргумент с типом [36mтекст[39m не может быть установлен параметру с типом [36mчисло*[39m"`;
